unpackaged/main/default/objects/Distribution_User__c/Distribution_User__c.object-meta.xml
<CustomObject>
    <description>Contains user records to drive automated record distribution</description>
    <label>Distribution User</label>
    <nameField>
        <label>Distribution User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>