unpackaged/main/default/objects/Distribution_User__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to make the Assignment User Active and eligible to receive records</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>