unpackaged/main/default/objects/Distribution_User__c/fields/Assignment_Cap__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Cap__c</fullName>
    <description>Maximum number of records that can be assigned to a user each day</description>
    <label>Assignment Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>